--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -4,4 +4,5 @@
   = time_ago_in_words(comment.created_at)
   ago.
 
-%p= link_to 'Delete', [comment.post, comment], method: :delete, data: { confirm: 'Are you sure?' }
+- if user_signed_in?
+  %p= link_to 'Delete', [comment.post, comment], method: :delete, data: { confirm: 'Are you sure?' }
