--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,16 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    - flash.each do |name, msg|
+      = content_tag(:div, msg, class: "alert alert-#{name}")
+    
+    - if !user_signed_in?
+      %p= link_to "Admin Login", new_user_session_path
+      
+    - if user_signed_in?
+      %p= link_to "New Post", new_post_path
+      %p= link_to "Log Out", destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }
+      
     = yield
   
   
