--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,7 @@
-%p= link_to "New Post", new_post_path
 - @posts.each do |post|
+  = link_to post do
+    = post.created_at.strftime("%b %d")
+    %br
+    = post.created_at.strftime("%Y")
   %h2= link_to post.title, post
-  %p= simple_format(post.body)
+  %p= simple_format(post.body)   
