--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,8 +7,9 @@
 = render 'comments/form'
 
 %p
-  = link_to "Edit", edit_post_path(@post)
-  |
-  = link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"}
-  |
+  - if user_signed_in?
+    = link_to "Edit", edit_post_path(@post)
+    |
+    = link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"}
+    |
   = link_to "Back", root_path
